[package]
name = "miniq"
version = "0.1.0"
authors = ["grdvsng@gmail.com <grdvsng@gmail.com>"]
edition = "2018"
lazy_static = "1.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.5.0"
regex = "1"
chrono = "^0.4"
json = "0.12.2"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typed-html = "0.2.2"
lazy_static = "1.4.0"